# xson

./: .gitignore  .pylintrc  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  RELNOTES.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst  xson.rst
src/xson/: dump.py  pkgdata.py  tool.py
tests/: test_cross_validate.py  test_dump.py  test_internet_draft.py  test_load.py  test_tool.py
xson/: __init__.py  dump.py  load.py  pkgdata.py
