[metadata]
name = xson
description = XSON: XML Encoding for JSON
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/xson
license = BSD
license_files = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
platform = any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version < "3.8"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xson-tool = xson.tool:execute
